Add Swagger docs and update API
